--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "engines": {
     "node": ">=10"
@@ -51,6 +50,7 @@
     "size-limit": "^8.0.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
+    "typedoc": "^0.23.24",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -59,6 +59,7 @@
     "@solana/wallet-adapter-react": "^0.15.8",
     "@solana/wallet-adapter-wallets": "^0.17.0",
     "@solana/web3.js": "^1.50.1",
+    "axios": "^1.2.6",
     "bs58": "^5.0.0"
   }
 }
