--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsdx build && tsc-alias",
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
@@ -48,6 +48,7 @@
     "@types/jest": "^28.1.6",
     "husky": "^8.0.1",
     "size-limit": "^8.0.0",
+    "tsc-alias": "^1.8.2",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typedoc": "^0.23.24",
