--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "husky": "^8.0.1",
     "size-limit": "^8.0.0",
     "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^4.1.2",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typedoc": "^0.23.24",
