--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "version": "0.1.0",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
@@ -10,18 +10,12 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build && tsc-alias",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
+    "test": "jest",
+    "clean": "rimraf dist",
+    "build:esm": "tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json && tsc-alias -p tsconfig.cjs.json",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "prepare-doc": "rimraf docs && npx typedoc"
   },
   "prettier": {
     "printWidth": 80,
@@ -31,29 +25,15 @@
   },
   "name": "shyft-js",
   "author": "impin2rex",
-  "module": "dist/shyft-js.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/shyft-js.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/shyft-js.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^8.0.0",
     "@types/bs58": "^4.0.1",
     "@types/jest": "^28.1.6",
-    "husky": "^8.0.1",
-    "size-limit": "^8.0.0",
+    "@types/react": "^18.0.27",
+    "rimraf": "^4.1.2",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.4.0",
     "typedoc": "^0.23.24",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@metaplex/js": "^4.12.0",
@@ -63,5 +43,9 @@
     "@solana/web3.js": "^1.50.1",
     "axios": "^1.2.6",
     "bs58": "^5.0.0"
+  },
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
   }
 }
