--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
   "name": "shyft-js",
   "author": "impin2rex",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/bs58": "^4.0.1",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.27",
+    "babel-jest": "^29.4.1",
+    "dotenv": "^16.0.3",
+    "jest": "^29.4.1",
     "rimraf": "^4.1.2",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
     "typedoc": "^0.23.24",
