--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
 	"include": [
-		"src"
+		"src",
+		"tests"
 	],
 	"compilerOptions": {
+		"baseUrl": ".",
+		"rootDir": ".",
 		"target": "es2018",
 		"moduleResolution": "node",
+		"resolveJsonModule": true,
 		"declaration": true,
 		"sourceMap": true,
 		"strict": true,
@@ -12,9 +16,9 @@
 		"esModuleInterop": true,
 		"paths": {
 			"@/*": [
-				"./src/*"
+				"src/*"
 			]
-		},
+		}
 	},
 	"ts-node": {
 		"require": [
