--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,8 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2015",
     "module": "CommonJS",
-    "outDir": "dist/cjs"
+    "outDir": "dist/cjs",
+    "rootDir": "src"
   },
   "exclude": [
     "tests"
