--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,9 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"module": "ES2020",
-		"outDir": "dist/esm"
+		"target": "ES2018",
+		"outDir": "dist/esm",
+		"rootDir": "src"
 	},
 	"exclude": [
 		"tests"
