--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
   },
   "name": "@shyft-to/js",
   "author": "shyft-to",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shyft-to/js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Shyft-to/js/issues"
+  },
+  "homepage": "https://shyft.to",
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
