--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: '🚀 Release'
+name: 🚀 Release
 
 on:
   release:
@@ -11,13 +11,13 @@ jobs:
     steps:
       - name: 📚 Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      # Setup .npmrc file to publish to npm
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-          registry-url: https://registry.npmjs.org/
+          registry-url: "https://registry.npmjs.org"
+          scope: "@shyft-to"
       - name: Install dependencies
         run: npm ci
       - name: 🛠 Build
@@ -25,4 +25,4 @@ jobs:
       - name: 🚀 Publish
         run: npm publish --access public
         env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
