--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   "dependencies": {
     "@solana/web3.js": "^1.74.0",
     "axios": "^1.2.6",
-    "bs58": "^5.0.0"
+    "bs58": "^5.0.0",
+    "form-data": "^4.0.0"
   },
   "private": false,
   "publishConfig": {
