--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@solana/web3.js": "^1.74.0",
     "axios": "^1.2.6",
     "bs58": "^5.0.0",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "lodash": "^4.17.21"
   },
   "private": false,
   "publishConfig": {
